[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/DQPanel.tres" type="StyleBox" id=1]
[ext_resource path="res://UI/StatsPanel.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[node name="StatsPanel" type="Panel"]
margin_left = 16.0
margin_top = 24.0
margin_right = 80.0
margin_bottom = 120.0
rect_min_size = Vector2( 64, 96 )
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 64.0
margin_bottom = 14.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Title"]
margin_left = 16.0
margin_right = 48.0
margin_bottom = 14.0
rect_min_size = Vector2( 32, 8 )
size_flags_horizontal = 4
custom_styles/normal = SubResource( 1 )
text = "jp00"
align = 1
max_lines_visible = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 124.0
custom_constants/margin_right = 8
custom_constants/margin_top = 0
custom_constants/margin_left = 8
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 8.0
margin_right = 56.0
margin_bottom = 106.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/MarginContainer/Stats"]
margin_right = 48.0
margin_bottom = 106.0
custom_constants/vseparation = 9
custom_constants/hseparation = 4
columns = 2

[node name="Lv" type="Label" parent="VBoxContainer/MarginContainer/Stats/GridContainer"]
margin_right = 20.0
margin_bottom = 14.0
text = "LV"

[node name="LvAmt" type="Label" parent="VBoxContainer/MarginContainer/Stats/GridContainer"]
margin_left = 24.0
margin_right = 48.0
margin_bottom = 14.0
rect_min_size = Vector2( 24, 0 )
text = "3"
align = 2

[node name="Hp" type="Label" parent="VBoxContainer/MarginContainer/Stats/GridContainer"]
margin_top = 23.0
margin_right = 20.0
margin_bottom = 37.0
text = "HP"

[node name="HpAmt" type="Label" parent="VBoxContainer/MarginContainer/Stats/GridContainer"]
margin_left = 24.0
margin_top = 23.0
margin_right = 48.0
margin_bottom = 37.0
rect_min_size = Vector2( 24, 0 )
text = "22"
align = 2

[node name="Mp" type="Label" parent="VBoxContainer/MarginContainer/Stats/GridContainer"]
margin_top = 46.0
margin_right = 20.0
margin_bottom = 60.0
text = "MP"

[node name="MpAmt" type="Label" parent="VBoxContainer/MarginContainer/Stats/GridContainer"]
margin_left = 24.0
margin_top = 46.0
margin_right = 48.0
margin_bottom = 60.0
rect_min_size = Vector2( 24, 0 )
text = "5"
align = 2

[node name="G" type="Label" parent="VBoxContainer/MarginContainer/Stats/GridContainer"]
margin_top = 69.0
margin_right = 20.0
margin_bottom = 83.0
text = "G"

[node name="GAmt" type="Label" parent="VBoxContainer/MarginContainer/Stats/GridContainer"]
margin_left = 24.0
margin_top = 69.0
margin_right = 48.0
margin_bottom = 83.0
rect_min_size = Vector2( 24, 0 )
text = "125"
align = 2

[node name="E" type="Label" parent="VBoxContainer/MarginContainer/Stats/GridContainer"]
margin_top = 92.0
margin_right = 20.0
margin_bottom = 106.0
text = "E"

[node name="EAmt" type="Label" parent="VBoxContainer/MarginContainer/Stats/GridContainer"]
margin_left = 24.0
margin_top = 92.0
margin_right = 48.0
margin_bottom = 106.0
rect_min_size = Vector2( 24, 0 )
text = "31"
align = 2
